@@ -159,7 +159,7 @@ class SGL_FrontController
     function loadRequiredFiles()
     {
         $cachedLibs = SGL_VAR_DIR . '/cachedLibs.php';
-        if (is_file($cachedLibs) && SGL_CACHE_LIBS) {
+        if (is_file($cachedLibs) && defined('SGL_CACHE_LIBS')) {
             require_once $cachedLibs;
         } else {
             $coreLibs = dirname(__FILE__);
@@ -191,7 +191,7 @@ class SGL_FrontController
             foreach ($aRequiredFiles as $file) {
                 require_once $file;
 
-                if (SGL_CACHE_LIBS === true) {
+                if (defined('SGL_CACHE_LIBS') && SGL_CACHE_LIBS === true) {
                     // 270kb vs 104kb
                     if ($ok = version_compare(phpversion(), '5.1.2', '>=')) {
                         $fileCache .= php_strip_whitespace($file);
@@ -200,7 +200,7 @@ class SGL_FrontController
                     }
                 }
             }
-            if (SGL_CACHE_LIBS === true) {
+            if (defined('SGL_CACHE_LIBS') && SGL_CACHE_LIBS === true) {
                 $ok = file_put_contents($cachedLibs, $fileCache);
             }
         }
